# Sentinel-Review

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
benchmarks/: bandit_comparison.md  bandit_results.json  sentinel_results.json
docs/: ARCHITECTURE.md  LIMITATIONS.md  PROMPT_ENGINEERING.md  SECURITY.md
examples/: ground_truth.yaml
examples/clean_samples/: 01_parameterized_query.py  02_bcrypt_password.py  03_safe_subprocess.py  04_validated_url_fetch.py
examples/vulnerable_samples/: 01_sql_injection.py  02_command_injection.py  03_path_traversal.py  04_hardcoded_credentials.py  05_weak_crypto.py  06_ssrf.py  07_insecure_deserialization.py  08_idor.py  09_xxe.py  10_open_redirect.py
prompts/: CHANGELOG.md  v1.md  v2.md
src/sentinel/: __init__.py  analyzer.py  cli.py  config.py  exceptions.py  formatters.py  models.py  prompts.py
tests/: test_cli.py  test_config.py  test_exceptions.py  test_formatters.py  test_models.py  test_prompts.py
